[package]
name = "tidefi-primitives"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
serde_json = { version = "1.0", optional = true }
codec = { package = "parity-scale-codec", version = "2.2.0", default-features = false, features = ["derive"] }
frame-system = { default-features = false, git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sp-core = { default-features = false, git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sp-runtime = { default-features = false, git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
sp-application-crypto = { default-features = false, git = "https://tributary.semantic-network.tech/semnet/tidefi/back/substrate", branch = "tidefi-1.0.1" }
scale-info = { version = "1.0", default-features = false }
strum = { version="0.21.0", optional = true }
strum_macros = { version= "0.21.1", optional = true }

[features]
default = ["std"]
std = [
    "scale-info/std",
    "codec/std",
    "serde",
    "serde_json",
    "strum",
    "strum_macros",
    "frame-system/std",
    "sp-application-crypto/std",
    "sp-core/std",
    "sp-runtime/std",
]
