[package]
name = "tidefi-primitives-cli"
authors = ["Semantic Network Team <publishers@tidelabs.org>"]
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tidefi-primitives"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.101" }
serde_json = { version = "1.0" }
strum = { version="0.23" }
strum_macros = { version= "0.23"}
tidefi-primitives = { path = "../primitives" }
color-eyre = "0.6.2"
structopt = "0.3.25"
