[package]
name = "tidefi-primitives"
authors = ["Semantic Network Team <publishers@tidelabs.org>"]
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.101", optional = true }
serde_json = { version = "1.0", optional = true }
strum = { version="0.23", optional = true }
strum_macros = { version= "0.23", optional = true }
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
sp-arithmetic = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-core = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-runtime = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
sp-application-crypto = { default-features = false, git = "https://github.com/tidelabs/substrate", branch = "tidechain" }
scale-info = { version = "2.1", default-features = false }
tidefi-primitives-macro = { path = "../macro" }

[features]
default = ["std"]
std = [
    "serde",
    "serde_json",
    "strum",
    "strum_macros",
    "scale-info/std",
    "codec/std",
    "sp-application-crypto/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-arithmetic/std",
]
